# ww

./: .gitignore  LUT变色_开发详情.md  PP官方变色_案例整理.md  PP官方管线_Tab2_TGA变色输出_开发详情.md  PP官方管线_技术文档.md
HighPro_LUT/: 02_开发里程碑_HighPro_LUT.md  05_AE渲染模式对齐与光晕溢出定位.md  05_Alpha合成空间踩坑复盘.md  AGENT.md  CMakeLists.txt  CMakePresets.json  LayerSlot_SchemePalette_智能随机_P0落地修正版.md  README.md  TGA图片渲染光晕溢出问题定位分析.md  app.rc  build.bat  build_static.bat  pack.bat  半语义MaterialRole分块与随机变色规则.md  技术文档_HighPro_LUT.md  方案画廊_细化方案与配色方案转移_开发计划.md  曲线调节性能-2.md  曲线调节性能.md  服装智能随机颜色二次优化方案.md  静态EXE打包完整记录.md  静态Qt单EXE打包_最推荐版本.md  项目开发时间轴.md
HighPro_LUT/MD开发文档资料/: 00_开发环境.md  03_TGA加载与渲染管线.md  04_资源与材质.md  06_GIF输出管线.md  EXE输出GIF图-2.md  EXE输出GIF图.md  GIF输出优化.md  LayerColorSlot_颜色实现逻辑.md  Qt软件风险.md  TGA图像光晕问题.md  使用指南_HighPro_LUT.md  双LayerSlot_颜色预设新增开发方案.md  开发日志_20260604.md  开发日志_20260605.md  服装智能随机颜色优化计划.md  角色序列图处理.md  角色整体色调变换的技术实现方案研究.md  随机变色深度总结与优化建议.md  项目开发时间轴.md  颜色随机_预设方案_开发环境_完整整理.md  颜色随机与效果空间详解.md
HighPro_LUT/assets/: assets.qrc
HighPro_LUT/assets/shaders/: effect_chain.hlsl  fullscreen_quad.hlsl  recolor.hlsl
HighPro_LUT/src/: main.cpp
HighPro_LUT/src/app/: AppSettings.cpp  AppSettings.h  AppTheme.cpp  AppTheme.h  ProjectController.cpp  ProjectController.h  ProjectIO.cpp  ProjectIO.h  ThumbnailWorker.cpp  ThumbnailWorker.h
HighPro_LUT/src/core/: ColorEffect.cpp  ColorEffect.h  CurveSolver.cpp  CurveSolver.h  HaldClut.cpp  HaldClut.h  KPoint.h  LayerData.cpp  LayerData.h  PathUtil.cpp  PathUtil.h  Project.h  ResourceScanner.cpp  ResourceScanner.h  SchemePalette.cpp  SchemePalette.h
HighPro_LUT/src/render/: D3D11Context.cpp  D3D11Context.h  D3D11Shader.cpp  D3D11Shader.h  D3D11Texture.cpp  D3D11Texture.h  DebugDumper.cpp  DebugDumper.h  FrameLoader.cpp  FrameLoader.h  FrameRenderer.cpp  FrameRenderer.h  GifExporter.cpp  GifExporter.h  LutBaker.cpp  LutBaker.h  PngExporter.cpp  PngExporter.h
HighPro_LUT/src/ui/: D3DWidget.cpp  D3DWidget.h  EffectPanel.cpp  EffectPanel.h  LayerTreePanel.cpp  LayerTreePanel.h  MainWindow.cpp  MainWindow.h  PreviewPanel.cpp  PreviewPanel.h  SchemePanel.cpp  SchemePanel.h  SchemeRefineDialog.cpp  SchemeRefineDialog.h
HighPro_LUT/src/ui/widgets/: CurveEditor.cpp  CurveEditor.h
HighPro_LUT/tools/: sfx_config.txt
py/: lut_recolor_page.py  mcolorkey.py  path_widgets.py  pp_bake.py  pp_core.py  pp_exporter.py  pp_format.py  pp_pipeline_page.py  tcp_loader.py
开发文档/: 01_技术方案_HighPro_LUT.md  02_开发里程碑_HighPro_LUT.md  03_后期优化清单.md  颜色图处理.md  高性能序列帧角色换色工具EXE开发技术方案研究.md
